Adicionado incrementos e correções

--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -7,11 +7,11 @@ As tecnologias utilizadas consiste de todos os recursos que foram necessários p
 
 
 \subsection{Etapas de desenvolvimento}
-Esta arquitetura foi desenvolvida sob uma metodologia ágil com destaque para uma programação extrema e teste contínuo. A arquitetura recebeu alterações durante 10 meses e a primeira etapa de desenvolvimento introduziu o suporte aos plugins. O primeiro desafio foi desacoplar os plugins do arquivo qrc\footnote{qrc – \textit{Qt resource collection} é um arquivo xml que mapeia os arquivos que serão empacotados no aplicativo.} e permitir que a aplicação carregasse-os dinamicamente. Também nesta primeira etapa, foi implementado alguns recursos associados aos plugins, como controle de cache dos arquivos qml, ordenação e \textit{parsing} das páginas (definido pelos plugins), além da criação de um componente genérico a ser extendido por todas as páginas do aplicativo. O controle de cache consiste em regenerar o cache dos arquivos qml após uma atualização para garantir o carregamento de mudanças em cada arquivo a cada release. O componente genérico foi definido como \textit{BasePage.qml} e será detalhado posteriormente, ele foi criado para garantir o atendimento de alguns requisitos mínimos de aparência, estrutura e simplificar a criação de páginas.\par
+Esta arquitetura foi desenvolvida sob uma metodologia ágil com destaque para uma programação extrema e teste contínuo. A arquitetura recebeu alterações durante 10 meses e a primeira etapa de desenvolvimento introduziu o suporte aos plugins. O primeiro desafio foi desacoplar os plugins do arquivo qrc\footnote{qrc – \textit{Qt resource collection} é um arquivo xml que mapeia os arquivos que serão empacotados no aplicativo.} e permitir que a aplicação carregasse-os dinamicamente. Também nesta primeira etapa, foi implementado alguns recursos associados aos plugins, como controle de cache dos arquivos qml, ordenação e \textit{parsing} das páginas (definido pelos plugins), além da criação de um componente genérico a ser extendido por todas as páginas do aplicativo. O controle de cache consiste em regenerar o cache dos arquivos qml após uma atualização para garantir o carregamento de mudanças em cada arquivo a cada release. O componente genérico foi definido como \textit{BasePage.qml}, ele é um objeto da camada IHC e será detalhado posteriormente, ele foi criado para garantir o atendimento de alguns requisitos mínimos de aparência, estrutura e simplificar a criação de páginas.\par
 
-Na segunda etapa, foi implementado classes c++ para gerenciar as configurações da aplicação, uma classe utilitária com métodos a serem invocados pelos plugins para operações de baixo nível ainda não suportados pelo qml, além de classes para recursos extra providos pela arquitetura como diálogo para seleção de arquivo no android e iOS e o envio de notificação para a área de notificações do sistema.\par
+Na segunda etapa, foi implementado classes c++ para gerenciar as configurações da aplicação, uma classe utilitária com métodos a serem invocados pelos plugins para operações de baixo nível ainda não suportados pelo qml, além de classes para recursos extra providos pela arquitetura como diálogo para seleção de arquivo no android e iOS.\par
 
-Na terceira etapa, foi definido os layouts visuais suportados pela arquitetura e dois modelos foram implementados: O layout em pilha, que faz uso do container \textit{StackView} e o layout em linha, que faz uso do container \textit{SwipeView}, ambos do \textit{QuickControls}\footnote{Módulo do Qt que provê um conjunto de componentes qml para construção de interfaces gráficas.}. O suporte ao layout deve ser definido pelo desenvolvedor no arquivo de configuração da aplicação. Em etapas seguintes foi desenvolvido componentes visuais reutilizáveis, além das APIs para requisição HTTP e persistência de dados via \textit{QSLITE}. As imagens a seguir apresentam os layouts em pilha e em linha e ambos foram extraídos da documentação do Qt.
+Na terceira etapa, foi definido os layouts visuais suportados pela arquitetura e dois modelos foram implementados: O layout em pilha, que faz uso do container \textit{StackView} e o layout em linha, que faz uso do container \textit{SwipeView}, ambos do \textit{QuickControls}\footnote{módulo do Qt que provê um conjunto de componentes qml para construção de interfaces gráficas.}. O tipo de layout do aplicativo deve ser definido pelo desenvolvedor no arquivo de configuração. Em etapas seguintes foi desenvolvido componentes visuais reutilizáveis, além das APIs para requisição HTTP, notificações do aplicativo e persistência de dados. Os containers de layouts trabalham na camada IHC e delegam a criação e remoção das páginas a objetos internos. As imagens a seguir apresentam os layouts em pilha e em linha e ambos foram extraídos da documentação do Qt.
 
 \begin{figure}[H]
 	\includegraphics[scale=0.5]{stackview_wireframe}
