--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -2,7 +2,11 @@
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
 \section{REFERENCIAL BIBLIOGRÁFICO}
-Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 descreve sobre Arquitetura de Software. A subseção 2.2 resume Sistemas de Informação. A subseção 2.3 apresenta Arquitetura de Referência para Sistemas de Informação. A subseção 2.4 apresenta de forma geral Arquiteturas de Aplicativos Móveis. A subseção 2.6 faz uma breve revisão sobre Projetos de Aplicativos Móveis. A subseção 2.7 destaca sobre Desenvolvimento de Software Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{REST}, o \textit{Push Notification} e o JSON.
+Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o QML. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 resume Sistemas de Informação. A subseção 2.4 apresenta Arquitetura de Referência para Sistemas de Informação. A subseção 2.5 apresenta de forma geral Arquiteturas de Aplicativos Móveis. A subseção 2.7 faz uma breve revisão sobre Projetos de Aplicativos Móveis. A subseção 2.8 destaca sobre Desenvolvimento de Software Orientado a Componentes. Para finalizar, a subseção 2.9 faz uma breve revisão sobre tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{REST}, o \textit{Push Notification} e o JSON.
+
+
+\subsection{O Qt e o QML}
+O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{https://qt.io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{https://en.wikipedia.org/wiki/Qt_(software)}. O Qt possui um amplo apoio à internacionalização e outros recursos incluem acesso a um banco de dados SQL, parsing de XML, parsing de JSON, gerenciamento de threads e suporte de rede \cite{http://www.linuxjournal.com/article/201}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para contruir interface gráfica, o QML. QML é uma especificação de interface de usuário e linguagem de programação. Ele permite que desenvolvedores e designers criem aplicativos de alta performance, fluidamente animados e visualmente atraentes. O QML oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{http://doc.qt.io/qt-5/qmlapplications.html}.
 
 
 %<dizer os benefícios em trabalhar orientado a arquiteturas: controle intelectual, atendimento de requisitos não-funcionais, evolução, \textit{testability}, etc>%
@@ -22,9 +26,9 @@ Os softwares estão em constante evolução e sofrem mudanças periodicamente, q
 		\item Suporte a reuso de componentes e maior controle dos mesmos.
 \end{itemize}
 
-O desenvolvimento de software envolve muitas partes (e.g., levantamento de requisitos, modelagem, implementação, testes, refatoração e etc.). O objetivo de um software é o que motiva a sua construção, e o que fomenta todas as partes que envolve o seu desenvolvimento é o problema que ele tenta solucionar no mundo real e parte do mérito de uma boa solução é devido ao uso de uma boa arquitetura.
+O desenvolvimento de software envolve muitas partes (e.g., levantamento de requisitos, modelagem, implementação, testes, refatoração e etc.). O objetivo de um software é o que motiva a sua construção, e o que fomenta todas as partes que envolve o seu desenvolvimento é o problema que ele tenta solucionar no mundo real e parte do mérito de uma boa solução é devido ao uso de uma boa arquitetura.\par
 
-Neste trabalho, arquitetura de software pode ser compreendida nas decisões de implementação, nas restrições impostas pelo uso dos recursos fornecidos e dos componentes reutilizáveis, além dos estilos arquiteturais provenientes das APIs utilizadas, dentre elas, o \textit{Event-Based}, mecanismo de comunicação baseado em eventos provido pelo Qt. Outro aspecto arquitetural deste trabalho é um estilo de desenvolvimento orientado a plugins. Os plugins devem representar os componentes específicos e as funcionalidades de cada projeto baseado nesta arquitetura, eles são independentes entre si e proporcionam baixo acoplamento entre as funcionalidades do sistema.
+Neste trabalho, arquitetura de software pode ser compreendida nas decisões de implementação, nas restrições impostas pelo uso dos recursos disponibilizados e dos componentes reusáveis, além dos estilos arquiteturais provenientes das APIs utilizadas, dentre elas, o \textit{Event-Based}, mecanismo de comunicação baseado em eventos provido pelo Qt. Outro aspecto arquitetural deste trabalho é um estilo de desenvolvimento orientado a plugins. Os plugins devem representar os componentes específicos e as funcionalidades de cada projeto baseado nesta arquitetura, eles são independentes entre si e proporcionam baixo acoplamento entre as funcionalidades do sistema.
 
 
 %\subsection{Visão Arquitetural}
@@ -44,16 +48,16 @@ Para compor uma arquitetura de referência é necessário apresentar os tipos do
 \subsection{Arquiteturas de Aplicativos Mobile}
 Arquitetura para aplicações móveis abrange quatro camadas: Interação Humana-Computador (\textit{IHC}), Aplicação Móvel, \textit{Middleware} e \textit{Enterprise Backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Neste trabalho, a arquitetura foi concentrada apenas nas camadas de interação, aplicação e \textit{Middleware}.
 
-\subsubsection{Camada de interação humana-computador}
-A camada de Interação Humana-Computador (mais conhecida como interface de usuário, ou simplesmente UI) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do qml que corresponde ao carregamento e exibição de uma imagem na tela.
+\subsubsection{Camada de Interação Humana-Computador}
+A camada de Interação Humana-Computador (mais conhecida como IHC, interface de usuário ou simplesmente UI) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do qml que corresponde ao carregamento e exibição de uma imagem na tela.
 
-\subsubsection{Camada de aplicação}
+\subsubsection{Camada de Aplicação}
 A camada de aplicação corresponde ao processamento de ações e eventos provenientes da camada de interação, como por exemplo, captando eventos de toque em objetos visuais e realizando processamento em segundo plano. Esta camada, corresponde a componentes não visuais e interagem diretamente com a camada de \textit{middleware}. Objetos da camada de aplicação podem por exemplo, gerenciar e controlar a criação de outros objetos. Um exemplo de objeto desta camada é o \textit{StackView} do qml, que carrega páginas dinamicamente.
 
-\subsubsection{Camada de middleware}
+\subsubsection{Camada de Middleware}
 A camada de \textit{middleware} intercala entre a camada de aplicação com a camada de \textit{backend}. O objetivo dessa camada é fornecer de forma abstrata e genérica um meio de comunicação entre o modelo de dados da aplicação com a camada de \textit{backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Ela é também responsável por interagir com o meio de comunicação disponível no dispositivo abstraindo para a camada de aplicação qual foi a interface de hardware utilizada. Objetos da camada de \textit{middleware} podem ser executados de forma assíncrona para que não bloqueiem os eventos da tela para o usuário, enquanto aguardam um feedback da camada de \textit{backend} para permitir melhor desempenho e usabilidade da aplicação. Um exemplo de objeto que trabalha nessa camada é o resposável por realizar requisições HTTP ao serviço Rest.
 
-\subsubsection{Camada de backend}
+\subsubsection{Camada de Backend}
 A camada \textit{backend} consiste de uma outra aplicação que responde pelas requisições do aplicativo através de uma rede via protocolo \textit{HTTP}. Esta camada está associada ao \textit{web service} ou serviço REST. O \textit{web service} pode atender a diferentes requisições e dispositivos, além de abstrair para a aplicação, toda lógica de negócios referente ao armazenamento e processamento dos dados do sistema. A implementação desta camada pode ser desenvolvida sobre uma outra arquitetura, além de implementar regras de negócio inerentes ao seu funcionamento e portanto, não será detalhada neste trabalho.
 
 
@@ -83,7 +87,7 @@ O reuso de componentes é um recurso extra desta arquitetura, pois dispõe de de
 %<colocar uma figura explicando uma requisicao RESTful convencional>%
 %<benefícios do RESTful: porque tem sido amplamente adotado?>%
 \subsection{Web Services, RESTful, Push Notification e JSON}
-Os \textit{web services} constituem uma tecnologia emergente da Arquitetura Orientada a Serviços (SOA) \cite{perepletchikov}. Com a expansão da internet e a necessidade de integração entre aplicações web, tornou-se necessário a centralização de informações para serem acessados por diferentes clientes. Para esse propósito, foi criada a tecnologia de \textit{web services} \cite{ibm_research}. 
+\textit{Web Services} constituem uma tecnologia emergente da Arquitetura Orientada a Serviços (SOA) \cite{perepletchikov}. Com a expansão da internet e a necessidade de integração entre aplicações web, tornou-se necessário a centralização de informações para serem acessados por diferentes clientes. Para esse propósito, foi criada a tecnologia de \textit{web services} \cite{ibm_research}. 
 
 \textit{RESTFul} é um estilo arquitetural para a construção de sistemas distribuídos \cite{fielding}. O elemento fundamental da arquitetura RESTful é o \textit{resource} ou recurso. Um recurso pode ser uma página web contendo um documento estruturado, uma imagem ou até mesmo um vídeo. Para localizar os recursos envolvidos em uma interação entre os componentes da arquitetura RESTful é utilizado o chamado identificador de recurso ou \textit{URI}. Com isso, um recurso pode ser representado através de diferentes formatos e o mais comum e utilizado é o \textit{JSON}. O termo \textit{REST}, é empregado em serviços \textit{RESTful} que não implementam todos os princípios da especificação do estilo arquitetural definido por \textit{Fielding} \cite{fielding}. Para que todos os princípios deste estilo sejam respeitados, um conjunto de restrições deve ser seguido, os quais não serão abordados neste trabalho. Para facilitar a compreensão geral de um serviço \textit{REST}, a imagem à seguir foi adicionada para representar um modelo de comunicação entre um cliente ou dispositivo e um serviço \textit{RESTful}.
 
@@ -93,7 +97,7 @@ Os \textit{web services} constituem uma tecnologia emergente da Arquitetura Orie
 
 % Adicionar uma imagem mostrando Push Notification %
 
-\textit{JSON}\footnote{https://json.org} (\textit{JavaScript Object Notation}) é um conjunto de chaves e valores, que podem
-ser interpretados por qualquer linguagem. Além de ser um formato de troca de dados largamente utilizado em serviços REST, é fácil de ser entendido e escrito pelos programadores. Estas propriedades fazem do JSON um objeto ideal para o intercâmbio de dados em aplicações web tal como o XML \cite{jun_y_zhishu}.
+\textit{JSON} (\textit{JavaScript Object Notation}) é um conjunto de chaves e valores, que podem
+ser interpretados por qualquer linguagem. Além de ser um formato de troca de dados largamente utilizado em serviços RESTFul, é fácil de ser entendido e escrito pelos programadores. Estas propriedades fazem do JSON um objeto ideal para o intercâmbio de dados em aplicações web tal como o XML \cite{jun_y_zhishu}.
 
 % Adicionar uma imagem mostrando um modelo de JSON propriedade->tipo_>valor %
