--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -11,7 +11,8 @@
 Nesta seção, serão apresentado os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final da seção, contém uma tabela que compara as principais características deste projeto com os trabalhos relacionados.\par
 
 %artigo 1%
-\textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes}\par
+\textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes} \cite{melotti_2014}
+\par
 A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.\par
 
 O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais, e são eles, o cache de dados (persistência local), notificações do sistema (local e \textit{push notification}), acesso a rede e o provimento de componentes reutilizáveis pelas aplicações baseadas na arquitetura proposta. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
@@ -34,7 +35,7 @@ Recurso & Este trabalho & CReAMA \\ \hline
 
 
 %artigo 2%
-\textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis}\par
+\textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis} \cite{moca_2004}\par
 MoCA (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes servicos como consumidores de informações de contexto. Os servicos providos pela MoCA livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto. O conjunto de APIs oferecidas pela MoCA para desenvolvimento de aplicações compreende tres grupos: as APIs de comunicação, que fornecem interfaces de comunicação sícrona e assícrona (baseada em eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
 
 A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida pelo uso dos estilos arquiteturais \textit{Event Based} e \textit{Cliente Servidor}. Além provê APIs de alto nível para operações de rede, persistência de dados local e notificação do usuário. No entando, MoCa foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente servidor através de serviços \textit{RESTFul}. A tabela a seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
@@ -56,10 +57,10 @@ Recurso & Este trabalho & MoCA \\ \hline
 
 
 %artigo 3%
-\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java}\par
+\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java} \cite{jauridacruzjunior}\par
 O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks PhoneGap e Sencha Touch. Os aplicativos desenvolvidos usando o PhoneGap são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS. O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação RestFul utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks PhoneGap e Sencha Touch tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  PhoneGap dispõe uma arquitetura MVC e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos Javascript. O Sencha Touch dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
-O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho as notificações do sistema. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Jauri da Cruz Junior.
+O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho as notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Jauri da Cruz Junior.
 
 \begin{table}[H]
 \small
