--- a/references.bib
+++ b/references.bib
@@ -92,7 +92,7 @@
 	howpublished = "\url{https://www.w3.org/TR/wsdl}"
 }
 
-@ARTICLE{rafael_heider,
+@article{rafael_heider,
 	author  = "Rafael Heider Barros Feijó",
 	title   = "Uma arquitetura de software baseada em componentes para   visualização de informações industriais",
 	journal = "Programa de Pós-Graduação em Engenharia Elétrica do Centro de Tecnologia da Universidade Federal do Rio Grande do Norte",
@@ -271,7 +271,7 @@
 	address = {New York, NY, USA}
 }
 
-@ARTICLE{zambiasi,
+@article{zambiasi,
 	author  = {Zambiasi, Saulo Popov},
 	title   = {Uma arquitetura de referência para softwares assistentes pessoais baseada na arquitetura orientada a serviços},
 	journal = {Tese (doutorado) - Universidade Federal de Santa Catarina, Centro Tecnológico. Programa de Pós-Graduação em Engenharia de Automação e Sistemas},
@@ -281,7 +281,6 @@
 	note    = {https://repositorio.ufsc.br/handle/123456789/99348}
 }
 
-
 @book{Hofmeister:1999:ASA:322640,
 	author = {Hofmeister, Christine and Nord, Robert and Soni, Dilip},
 	title = {Applied Software Architecture},
@@ -290,7 +289,6 @@
 	publisher = {Addison-Wesley Longman Publishing Co., Inc.},
 	address = {Boston, MA, USA},
 }
-
 
 @misc{c._k_f._2006,
 	title = {Reference Model for Service Oriented Architecture},
@@ -322,21 +320,32 @@
     address   = {Rio de Janeiro, Brasil},
     edition   = {fourth}
 }
-
 %end bibliography
-
 
 %start related works%
 @misc{melotti_2014,
-	title = {CReAMA: Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes.},
-	url = {http://repositorio.ufes.br/handle/10/4270},
-	journal = {riUfes: Home},
-	publisher = {Universidade Federal do Espírito Santo},
-	author = {MELOTTI, M.},
-	year = {2014},
-	month = {Aug},
-	note = {http://repositorio.ufes.br/handle/10/4270?mode=full},
-	howpublished = "\url{http://repositorio.ufes.br/handle/10/4270}"
+	title 		 = {CReAMA: Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes.},
+	author		 = {MELOTTI, M.},
+	url 			 = {http://repositorio.ufes.br/handle/10/4270},
+	journal		 = {riUfes: Home},
+	publisher 	 = {Universidade Federal do Espírito Santo},
+	year			 = {2014}
+}
+
+@misc{moca_2004,
+	title="MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis.",
+	author="Rodrigues, Vagner José do Sacramento",
+	url="http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116",
+	publisher="Rio de Janeiro. PUC, Dep. de Informática, 2004.",
+	year="2004",
+	howpublished="\url{http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116}"
+}
+
+@misc{jauridacruzjunior,
+    author  	= {Jauri Da Cruz Júnior},
+    title   = {Solução Multiplataforma Para Smartphone Utilizando Os Frameworks Sencha Touch E Phonegap Integrado À Tecnologia Web Service Java},
+    journal = {TCC, Análise e Desenvolvimento de Sistemas. Instituto Municipal de Ensino Superior de Assis},
+    year    = {2014}
 }
 %end related works%
 
